@@ -1,3 +1,4 @@
+0.39.0-0 @09/24/2004 14:45:00 UTC@
 0.38.0-0 @09/13/2004 14:45:00 UTC@
 0.37.1-0 @08/22/2004 18:45:00 UTC@
 0.37.0-0 @08/03/2004 03:50:00 UTC@
